Fix task item content overflow

--- a/src/features/tasks/task-item/task-item.module.scss
+++ b/src/features/tasks/task-item/task-item.module.scss
@@ -64,8 +64,9 @@
   }
 
   &_content {
-    flex: 1;
+    flex: 1 0;
     @extend %vertical-center;
+    word-break: break-word;
 
     &.checked {
       text-decoration: line-through;
